# brickkit

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: architecture.md  executor-refactoring-plan.md  integration.md  local-development.md
docs/governance/: DATA_GOVERNANCE_PRINCIPLES.md  DATA_GOVERNANCE_STRATEGY.md  GOVERNANCE_ABSTRACTION_STRATEGY.md  GOVERNANCE_STRATEGIES.md  OPERATIONAL_GOVERNANCE_PATTERNS.md  README.md
docs/plans/: 01_drift_detection.md  02_abac_and_access_requests.md  principal_management_plan.md
examples/: README.md
examples/01_quickstart/: basic_catalog.py  schema_hierarchy.py  simple_grants.py  table_with_tags.py
examples/02_governance_defaults/: enterprise_defaults.py  financial_services.py  minimal_defaults.py
examples/03_team_governance/: access_manager_usage.py  cross_env_access.py  team_with_workspaces.py
examples/04_patterns/: physical_segregation.py  zone_progression.py
examples/05_full_governance/: finance_data_product.py
examples/06_manifest/: project.manifest.json  using_manifest.py
examples/07_convention/: convention_example.py
examples/08_vector_search_demo/: README.md  databricks.yml  demo_convention.py  prompt.md  vector_search_demo.ipynb  vector_search_demo.py
src/: ml_governance.py
src/brickkit/: __init__.py  convention.py  defaults.py  manifest.py  ml_governance.py
src/brickkit_tools/: __init__.py
src/executors/: __init__.py  base.py  catalog_executor.py  connection_executor.py  external_location_executor.py  function_executor.py  genie_executor.py  grant_executor.py  metastore_assignment_executor.py  mixins.py  schema_executor.py  storage_credential_executor.py  table_executor.py  tag_executor.py  vector_search_executor.py  volume_executor.py  workspace_binding_executor.py
src/genie/: README.md  deploy_genie_spaces.py  models.py
src/models/: __init__.py  access.py  base.py  catalogs.py  connections.py  deprecated.py  enums.py  external_locations.py  functions.py  genie.py  grants.py  metastores.py  ml_models.py  references.py  schemas.py  securables.py  sharing.py  storage_credentials.py  table_extensions.py  table_models.py  (+5 more)
tests/: __init__.py  conftest.py
(+84 files in other folders)
